# projection_block_construction

./: .gitignore  Experiment runner plots.ipynb  LICENSE  README.md  Thoughts on projection.md  benchmark_physics.py  environment.yml  lint.sh  matter_server_test.py  package.json  pyproject.toml  requirements.txt
analysis/: Analysis before migration.ipynb  Analysis many graphs.ipynb  Analysis.ipynb  Decomposition sequence.ipynb  Manuscript Simulation Analyses.ipynb  README.md  RLDM2022.ipynb  analysis_main.py  best_worst_subgoal_sequences.ipynb  cogsci2021.ipynb  cogtoolslab presentation Nov 2020.ipynb  decomposition_sequence.ipynb  sequence_selection.py  subgoal_analysis_main.py  subgoal_sequences.ipynb  tower selection analysis.ipynb
experiments/: AB_choice_experiment_stim_generation.py  Astar_search.py  Astar_search_exhaustive.py  Astar_search_physics.py  Astar_search_physics_small.py  BFS_model_comparision_for_simulation_analyses.py  BFS_search_exhaustive.py  Beam_search.py  Best_First_Search_search_exhaustive.py  Breadth_search.py  Construction_paper_search.py  Construction_paper_search_decompositions.py  Decomposition_increment_experiment.py  Decomposition_increment_experiment_vertical.py  Legal_actions_experiment.py  MCTS.py  Naive_Q_search.py  RLDM_full_decomp_BFS_experiment.py  RLDM_longer_seqs_experiment.py  RLDM_lookahead_scoping_experiment.py  RLDM_main_experiment.py  RLDM_scoping_experiment.py  RLDM_scoping_window_size_incremental_bigtowers_experiment.py  RLDM_scoping_window_size_lookahead_experiment.py  RLDM_scoping_window_size_lookahead_experiment_small.py  (+32 more)
(+168 files in other folders)
